# cdc_streaming

./: .gitignore  README.md  dbt_project.yml  diagram.py  docker-compose.yml  pyproject.toml
config_scripts/: dbload.sql
models/marts/: models.yml  usernames_grouping.sql  usernames_policies.sql
models/sinks/: snk_usernames_grouping.sql  snk_usernames_policies.sql
models/sources/: customer_data_raw.sql  customer_views.sql  sources.yml
models/staging/: models.yml  user_policies.sql
